add section in page

--- a/index.html
+++ b/index.html
@@ -34,16 +34,43 @@
       </div>
       <a href="https://brasilescola.uol.com.br/biografia/airton-senna-silva.htm" target="_blank">Fonte:
         https://brasilescola.uol.com.br/biografia/airton-senna-silva.htm</a>
-      <p>Ayrton Senna da Silva (21 de março de 1960 - 1 de maio de 1994)</p>
-      <a href="https://senna.com/" target="_blank">Visite o website oficial de Senna</a>
+      <p>Ayrton Senna da Silva <strong>(21 de março de 1960 - 1 de maio de 1994)</strong></p>
     </div>
   </main>
 
   <section>
-    <div>
-      ......
+    <div class="block_1">
+      <div class="text">
+        <h1>O que faz Senna ser único?</h1>
+        <p>
+          Destemido, vitorioso e carismático, Ayrton Senna conquistou muito mais do que <strong>três campeonatos
+            mundiais, 41 vitórias e 65 pole positions.</strong> A lenda das pistas nos proporcionou espetáculos mágicos
+          em corridas cheias de paixão, desenvoltura e emoção. A história de Senna ultrapassa os padrões de um simples
+          piloto de corrida, ele foi um <strong>exemplo de coragem, determinação e motivação</strong>. A jornada de
+          Ayrton se tornou inspiração para milhões de pessoas que buscam realizar seus sonhos, superar obstáculos e
+          encontrar seu lugar no mundo.
+        </p>
+      </div>
+      <div class="image">
+        <img src="images/Ayrton_Senna_2.jpg">
+      </div>
     </div>
+    <div class="block_2">
+      <div class="image image_2">
+        <img src="images/Senna_1992_Monaco_cropped.jpg">
+      </div>
+      <div class="text text_2">
+        <p>Ayrton Senna foi regente de uma sinfonia dos motores, foi maestro, solista e compositor de uma trilha
+          sinuosa, em que estão traçados todos os obstáculos, os encontros, os erros, os acertos, as vitórias e as
+          contradições que compõem a jornada de um herói em busca da sua verdade. Ayrton Senna nos ensinou a trilhar
+          as metas de nossa vida com muita determinação e amor. A eterna busca do piloto por sua melhor versão motiva
+          ainda hoje milhares de pessoas a lutarem para conquistar <strong>seu lugar no mundo.</strong>
+        </p>
+      </div>
+    </div>
+    <a href="https://senna.com/" target="_blank">Visite o website oficial de Senna</a>
   </section>
+
   <footer></footer>
 </body>
 
