--- a/index.html
+++ b/index.html
@@ -32,8 +32,9 @@
         dos mais marcantes da história do Brasil, durou cerca de 22 horas e foi acompanhado por aproximadamente 240
         mil pessoas.
       </div>
-      <a href="https://brasilescola.uol.com.br/biografia/airton-senna-silva.htm" target="_blank">Fonte:
-        https://brasilescola.uol.com.br/biografia/airton-senna-silva.htm</a>
+      <p id="text_link">Informações retiradas do site Brasil Escola, <a
+          href="https://brasilescola.uol.com.br/biografia/airton-senna-silva.htm" target="_blank">clique para
+          visualisar</a></p>
       <p>Ayrton Senna da Silva <strong>(21 de março de 1960 - 1 de maio de 1994)</strong></p>
     </div>
   </main>
@@ -68,10 +69,15 @@
         </p>
       </div>
     </div>
-    <a href="https://senna.com/" target="_blank">Visite o website oficial de Senna</a>
+    <a href="https://senna.com/" target="_blank">Para mais informações visite o website oficial de Senna</a>
   </section>
 
-  <footer></footer>
+  <footer>
+    <div class="text_footer">
+      <a href="https://github.com/AngeloResplandes" target="_blank"><img src="images/logo_github.png"></a>
+      <p>Criado por Angelo Resplandes.</p>
+    </div>
+  </footer>
 </body>
 
 </html>
