edit tag <a> in footer

--- a/index.html
+++ b/index.html
@@ -74,7 +74,8 @@
 
   <footer>
     <div class="text_footer">
-      <a href="https://github.com/AngeloResplandes" target="_blank"><img src="images/logo_github.png"></a>
+      <a href="https://github.com/AngeloResplandes" target="_blank" id="link_github"><img
+          src="images/logo_github.png"></a>
       <p>Criado por Angelo Resplandes.</p>
     </div>
   </footer>
